package ChineseChess.Factory;

import javax.swing.*;

/**
 * Abstract chess game factory
 */
public interface ChessFactory {
    JFrame createGUI();
}
